# pre-commit-emacs-vhdl-formatter

./: .flake8  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .prettierrc.yaml  LICENSE  README.md  pyproject.toml  requirements.txt  setup.cfg  setup.py
pre_commit_hooks/: emacs_vhdl_formatter.py
